--- a/aboutus.html
+++ b/aboutus.html
@@ -9,5 +9,9 @@
     <h1>About Us</h1>
     <h4>This is my 2nd page</h4>
     <p>this is modified para</p>
+    <ul>
+        <li>blue</li>
+        <li>red</li>
+    </ul>
 </body>
 </html>
